# image_semantic_segmentation

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  README.md  launch.sh  main.py  pyproject.toml
bash/: evaluate.sh  predict.sh  train.sh
configs/: acc.yaml  acc_deepspeed.yaml  acc_deepspeed_no_dynamo.yaml  acc_no_dynamo.yaml  deepspeed_cfg.json
data/model_weights/: config.json  model.safetensors
image_semantic_segmentation/: __init__.py  arguments.py  dataset.py  evaluation.py  inference.py  model.py  training.py
image_semantic_segmentation/legacy/: evaluate.py
notebooks/: data_processor.ipynb  training.ipynb
scripts/: evaluate.sh  predict.sh  process_data.sh  train.sh
